codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__empty.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› 让 Codex 做点什么                                                                                 " Hidden by multi-width symbols: [(3, " "), (12, " "), (14, " "), (16, " "), (18, " ")]
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  上下文剩余 100% · ? 查看快捷键                                                                    " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " ")]
