codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_empty_mode_only.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                          "
"› 让 Codex 做点什么       " Hidden by multi-width symbols: [(3, " "), (12, " "), (14, " "), (16, " "), (18, " ")]
"                          "
"                          "
"                          "
"                          "
"                          "
"                          "
"         上下文剩余 100%  " Hidden by multi-width symbols: [(10, " "), (12, " "), (14, " "), (16, " "), (18, " ")]
