codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_empty_mode_cycle_without_context.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                            "
"› 让 Codex 做点什么                         " Hidden by multi-width symbols: [(3, " "), (12, " "), (14, " "), (16, " "), (18, " ")]
"                                            "
"                                            "
"                                            "
"                                            "
"                                            "
"                                            "
"  计划模式 (Shift+Tab 切换模式)             " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (23, " "), (25, " "), (27, " "), (29, " ")]
